fix: improve navbar spacing

--- a/css/output.css
+++ b/css/output.css
@@ -757,6 +757,16 @@ video {
   row-gap: 6px;
 }
 
+.gap-x-\[min\(3vw\2c 2rem\)\] {
+  -moz-column-gap: min(3vw,2rem);
+       column-gap: min(3vw,2rem);
+}
+
+.gap-x-\[max\(3vw\2c 2rem\)\] {
+  -moz-column-gap: max(3vw,2rem);
+       column-gap: max(3vw,2rem);
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
